Fixing map display on mobile

--- a/edgeledger/css/mobile.css
+++ b/edgeledger/css/mobile.css
@@ -26,7 +26,7 @@
 }
 
 /* Smartphones */
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 730px) {
   #navbar {
     flex-direction: column;
     align-items: center;
